# inventariostore

./: .gitignore  .pre-commit-config.yaml  ARQUITECTURA_MODULAR.md  CHANGELOG.md  ESTADO_MIGRACION.md  Justfile  PLAN_MEJORAS_ESTRATEGICAS.md  PLAN_MEJORA_MANTENIBILIDAD.md  README.md  migrate_to_modules.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  test_api_rest.py  test_auth_rbac.py  test_automation_engine.py  test_replenishment_flow.py
src/: main.py  notifications_image_views.py
src/api/: __init__.py  rate_limiter.py  rest.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  controller.py  error_handler.py  events.py  schemas.py  theme_manager.py
src/core/controllers/: __init__.py  accounting_controller.py  admin_controller.py  advanced_inventory_controller.py  auth_controller.py  automation_controller.py  cart_controller.py  crm_controller.py  document_controller.py  extended_features_controller.py  hr_controller.py  inventory_controller.py  invoice_controller.py  notification_controller.py  phase1_controller.py  phase3_controller.py  product_controller.py  purchasing_controller.py  report_controller.py  sales_controller.py  sales_enhanced_controller.py  store_controller.py  warehouse_controller.py
src/modules/accounting/: __init__.py
src/modules/accounting/controllers/: __init__.py  accounting_controller.py
src/modules/accounting/repositories/: __init__.py
src/modules/accounting/services/: __init__.py
src/modules/accounting/ui/: __init__.py
src/modules/admin/: __init__.py
src/modules/admin/controllers/: __init__.py  admin_controller.py
src/modules/admin/repositories/: __init__.py  admin_repository.py
src/modules/admin/services/: __init__.py  admin_service.py
src/modules/admin/ui/: __init__.py
src/modules/auth/: __init__.py
src/modules/auth/controllers/: __init__.py  auth_controller.py
src/modules/auth/repositories/: __init__.py  auth_repository.py
src/modules/auth/services/: __init__.py  auth_service.py
src/modules/auth/ui/: __init__.py
src/modules/automation/: __init__.py
src/modules/automation/controllers/: __init__.py  automation_controller.py
src/modules/automation/repositories/: __init__.py
src/modules/automation/services/: __init__.py
src/modules/automation/ui/: __init__.py
src/modules/crm/: __init__.py
src/modules/crm/controllers/: __init__.py  crm_controller.py
src/modules/documents/: __init__.py
src/modules/hr/: __init__.py
src/modules/inventory/: __init__.py
src/modules/invoicing/: __init__.py
src/modules/notifications/: __init__.py
src/modules/products/: __init__.py
src/modules/purchasing/: __init__.py
src/modules/reports/: __init__.py
src/modules/sales/: __init__.py
src/modules/store/: __init__.py
src/modules/warehouses/: __init__.py
src/services/: __init__.py  advanced_inventory_db.py  auth.py  backup.py  code_handler.py  database.py  export.py  export_strategy.py  extended_features_db.py  financial_report_export.py  inventory_analysis.py  inventory_report_export.py  inventory_valuation.py  migrator.py  notifier.py  permissions.py  phase1_db.py  phase3_db.py  schema.sql  stock_monitor.py
src/services/automation/: __init__.py  engine.py
src/services/messaging/: __init__.py  base.py  dispatcher.py  telegram.py  whatsapp.py
src/services/migrations/: V10_purchasing.py  V11_crm.py  V12_document_management.py  V13_notifications.py  V14_sales_enhanced.py  V15_cart_and_store.py  V16_automation.py  V1_unify_soft_delete.py  V2_create_sessions.py  V3_drop_estado_column.py  V4_refresh_tokens.py  V5_password_reset_tokens.py  V6_email_verification_tokens.py  V7_invoicing.py  V8_accounting.py  V9_hr_module.py
src/services/repository/: __init__.py  accounting_repo.py  automation_repo.py  base.py  cart_repo.py  config_repo.py  crm_repo.py  document_repo.py  employee_repo.py  hr_repo.py  inventory_repo.py  invoice_repo.py  notification_repo.py  product_repo.py  purchasing_repo.py  sale_repo.py  sales_enhanced_repo.py  store_repo.py  user_repo.py
src/tests/: __init__.py  conftest.py  test_api_rest.py  test_auth.py  test_backup.py  test_billing.py  test_controllers.py  test_controllers_accounting.py  test_controllers_automation.py  test_controllers_cart.py  test_controllers_crm.py  test_controllers_document.py  test_controllers_hr.py  test_controllers_inventory.py  test_controllers_invoice.py  test_controllers_notification.py  test_controllers_purchasing.py  test_controllers_sales_enhanced.py  test_controllers_store.py  test_crypto.py  test_dashboard_unified.py  test_event_bus_notifications.py  test_export.py  test_jwt.py  test_lang_switcher.py  test_messaging_dispatcher.py  test_messaging_integration.py  test_messaging_stress.py  test_messaging_telegram.py  test_messaging_whatsapp.py  test_migrations.py  test_modular_integration.py  test_module_integration.py  test_notification_controller.py  test_notification_repo.py  test_notification_views.py  test_notifier.py  test_permissions.py  test_phase1_features.py  test_phase3_features.py  (+28 more)
src/ui/: __init__.py  _utils.py  accounting_views.py  admin.py  admin_views.py  advanced_features.py  app_view.py  auth_manager.py  automation_views.py  bulk_manager.py  cart_views.py  charts.py  components.py  crm_views.py  document_views.py  entity.py  entity_views.py  financial_reports.py  forgot_password_view.py  hr_views.py  inventory_analysis_views.py  inventory_operations.py  invoice_views.py  messaging_config_view.py  notification_views.py  notifications_image.py  notifications_image_views.py  phase1.py  phase1_views.py  phase1_views_part2.py  phase1_views_part3.py  phase3.py  phase3_views.py  phase3_views_part1.py  phase3_views_part2.py  pricing_inventory.py  pricing_inventory_views.py  product_reports.py  product_reports_views.py  purchasing_views.py  (+13 more)
src/ui/views/: __init__.py  dashboard_view.py  dialogs.py  nav_router.py  product_view.py  scanner_view.py  sidebar_builder.py
src/utils/: __init__.py  crypto.py  exceptions.py  i18n.py  logger.py  validators.py
src/utils/translations/: en.json  es.json
(+64 files in other folders)
