[project]
name = "inventariostore"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
    "flet-charts>=0.85.3",
    "reportlab>=5.0.0",
    "openpyxl>=3.1.5",
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "cryptography>=49.0.0",
    "ruff>=0.15.20",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.20",
]

[tool.flet]
org = "com.pawckar"
product = "inventariostore"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

# ---------------------------------------------------------------------------
# Code quality
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = ["__pycache__", ".git", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "YTT", "SIM", "PL", "RUF"]
ignore = ["PLR2004", "PLR0913", "PLR0915", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR", "SIM"]
"verify_*.py" = ["PLR", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["src/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.14" # Mantener la versión de Python
strict = false # Desactivado por defecto para no romper el build
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "core.*"
strict = true

[[tool.mypy.overrides]]
module = "services.repository.*"
strict = true

[tool.coverage.run]
source = ["src"]
omit = ["src/tests/*", "src/main.py"]

[tool.coverage.report]
fail_under = 50
exclude_lines = ["pragma: no cover", "def __repr__", "if __name__ == .__main__.:"]
